mintybubble.diff.css
/* This theme is based on the available theme called "Minty", A slight modification to fit a wallpaper. Made by 2xx04 */
body {background-image: url(https://github.com/2xx04/lemmy-ui-themes/raw/main/pictrs/image/mintybubble2560x1600.wallpaper.jpg); background-attachment:fixed; background-size: cover; background-position: center;}
.post-listing {
background: white;
padding: 20px;
border-radius: 20px;
}
.post-listing {
background: white;
padding: 20px;
border-radius: 20px;
border-style: solid;
}
.navbar {background: white;}
hr {opacity:0;}
label.btn.btn-outline-secondary.pointer.false {
background: white;
}
.my-3 {
margin-top: 0.5rem !important;
margin-bottom: 0.5rem !important;
}
h5.mb-0, h5.mb-2 {
    color: white;
}
.text-muted {
    color: #c6c6c6 !important;
}
div.false {
padding: 10px;
border-radius: 20px;
}
.comments {
background: white;
padding-left: 5px;
padding-right: 5px;
padding-bottom: 5px;
border-radius: 20px;
}
span.mr-2 {
    color: var(--gray) !important;
}
html body div#root div div.mt-4.p-0.fl-1 div.container div div.table-responsive table#community_table.table.table-sm.table-hover {
    background: white;
    padding: 20px;
    border-radius: 20px;
}
html body div#root div div.mt-4.p-0.fl-1 div.container div div.row div.col-md-6 h4 {
    color: #c6c6c6;
}
html body div#root div nav.container.navbar.navbar-expand-md.navbar-light.navbar-bg.p-3 {
    background: transparent;
}

html body div#root div div.mt-4.p-0.fl-1 div.container div.row div.col-12.col-md-8 div.mb-2 div.position-relative.mb-2 picture img.img-fluid.banner.img-expanded.slight-radius {
    border-radius: 20px;
}
html body div#root div div.mt-4.p-0.fl-1 div.container div.row div.col-12.col-lg-6.offset-lg-3.mb-4 h5 {
    color: white;
}
.col-form-label {
    color: #5a5a5a;
}
div.align-items-center:nth-child(2) > div:nth-child(1) > p:nth-child(1) {
    color: #5a5a5a;
}
html body div#root div div.mt-4.p-0.fl-1 div.container div.row div.col-12.col-md-8.mb-3 div div.comments div.comment div.comments {
    padding: 0px;
}
html body div#root div div.mt-4.p-0.fl-1 div.container div.row div.col-12.col-md-8 div div.mb-3 div div.d-flex.align-items-center.mb-2 div.md-div p {
    /*color: #ffd3d3;*/
    color: lightgrey;
} /* user description */
.mark {
    border-radius: 20px;
}
.border-light {
    border-color: transparent !important;}

